fixed overlapping categories bar and overlapping post tags

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -116,7 +116,7 @@ p {
     display: inline-block;
     margin-right: 15px;
     margin-top: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 
     text-transform: uppercase;
 
